--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -6,6 +6,7 @@ config:
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
     github.com/PalomoIFCA/publicsqaas-testing:
       branch: main
+      credential_tmp: true
       repo: https://github.com/PalomoIFCA/publicsqaas-testing
 environment:
   JPL_DOCKERFORCEBUILD: enabled
@@ -15,50 +16,50 @@ sqa_criteria:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing git:
         commands:
-        - /usr/bin/env sh .sqa/script.shaky-lime-horse.sh
-        container: qc.acc_goopy-olivine-termite
+        - /usr/bin/env sh .sqa/script.cloudy-azure-wombat.sh
+        container: qc.acc_nerdy-brown-malamute
   QC.Doc:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.snazzy-aquamarine-dane.sh
-        container: qc.doc_slimy-cinnamon-markhor
+        - /usr/bin/env sh .sqa/script.gimpy-tan-grouse.sh
+        container: qc.doc_homely-charcoal-audemer
       github.com/PalomoIFCA/publicsqaas-testing git:
         commands:
-        - /usr/bin/env sh .sqa/script.hazy-grey-toucan.sh
-        container: qc.doc_pretty-cerulean-caterpillar
+        - /usr/bin/env sh .sqa/script.tacky-mauve-sponge.sh
+        container: qc.doc_cloudy-cinnamon-lemur
       github.com/PalomoIFCA/publicsqaas-testing markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.squirrely-mustard-woodlouse.sh
-        container: qc.doc_squirrely-russet-butterfly
+        - /usr/bin/env sh .sqa/script.squirrely-peach-ray.sh
+        container: qc.doc_cheeky-corn-hippopotamus
   QC.Lic:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.stuffy-brass-turtle.sh
-        container: qc.lic_hasty-jade-tapir
+        - /usr/bin/env sh .sqa/script.lanky-fuchsia-harrier.sh
+        container: qc.lic_tacky-russet-zebra
   QC.Sec:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing bandit:
         commands:
-        - /usr/bin/env sh .sqa/script.trippy-celadon-numbat.sh
-        container: qc.sec_pokey-cornflower-terrier
+        - /usr/bin/env sh .sqa/script.hazy-maroon-frigatebird.sh
+        container: qc.sec_woolly-lemon-lobster
   QC.Sty:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing flake8:
         commands:
-        - /usr/bin/env sh .sqa/script.seedy-copper-buzzard.sh
-        container: qc.sty_squirrely-firebrick-giraffe
+        - /usr/bin/env sh .sqa/script.slaphappy-brown-harrier.sh
+        container: qc.sty_slaphappy-khaki-reindeer
   QC.Uni:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing pytest:
         commands:
-        - /usr/bin/env sh .sqa/script.boozy-scarlet-heron.sh
-        container: qc.uni_stealthy-cerulean-dodo
+        - /usr/bin/env sh .sqa/script.greasy-gamboge-mayfly.sh
+        container: qc.uni_beady-smalt-hippopotamus
   QC.Ver:
     repos:
       github.com/PalomoIFCA/publicsqaas-testing get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.shaggy-harlequin-rat.sh
-        container: qc.ver_leaky-ecru-iguana
+        - /usr/bin/env sh .sqa/script.pokey-mustard-dachshund.sh
+        container: qc.ver_lousy-linen-termite
 timeout: 5400
